generate questions with open api call